# atut-projet-smart-city

./: .gitignore  README.md  air_quality_prediction.ipynb  airqo_metadata.csv  pyproject.toml  requirements.txt  streamlit_dashboard.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
